# zip_routing

./: CMakeLists.txt  Q.md  README  README.md  ZipSystemFactory.h
cpp20/: main.cpp
cpp20/include/: AssignmentPolicy.h  common_types.h  cost_model.h  euclidean_spatial_model.h  flight.h  hospital.h  order.h  priority_based_assignment_policy.h  routing_policy.h  spatial_distance_assignment_policy.h  spatial_model.h  spatial_model_interface.h  trivial_routing_policy.h  zip_scheduler.h  zip_system.h  zip_system_factory.h  zip_system_state_actor.h
cpp20/src/: euclidean_spatial_model.cpp  hospital.cpp  order.cpp  priority_based_assignment_policy.cpp  trivial_routing_policy.cpp  util.cpp  zip_scheduler.cpp  zip_system_factory.cpp  zip_system_state_actor.cpp
